# Maya-Deformer-Node-Shape-Matching

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindArmadillo.cmake  FindMaya.cmake
ext/armadillo/lib/: libarmadillo.6.30.2.dylib  libarmadillo.6.dylib
include/: CustomDeformerPlugin.h  HelloWorldCmd.h  ParticleSystem.h  PushDeformerNode.h  ShapeDeformerNode.h  utils.h
mayaScenes/: teddy.mb
mayaScenes/.mayaSwatches/: teddy.mb.swatches
melScripts/: createExampleScene.mel
src/: CMakeLists.txt  CustomDeformerPlugin.cpp  HelloWorldCmd.cpp  ParticleSystem.cpp  PushDeformerNode.cpp  ShapeDeformerNode.cpp  untitled  utils.cpp
